Add the inputfeature function

--- a/SND.KQ.ServiceForm/MainForm.resx
+++ b/SND.KQ.ServiceForm/MainForm.resx
@@ -186,4 +186,78 @@
         AD8AAAD/gAAB/4AAAf/AAAP/wAAD//AAD//wAA///AA///8A//8=
 </value>
   </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAICAAAAAAAACoDAAAJgAAABAQAAAAAAAAaAMAAM4MAAAoAAAAIAAAAEAAAAABABgAAAAAAIAM
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQUlFSe317KSgpAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        e317vb69vb69paallJaUa21rUlFSUlFSAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUlVSxsPGxsPGxsPGxsPGpaalpaalzs/Ovb697+/v
+        zs/OY2VjUlFSAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        EBQQraqtxsfGxsfGxsfGxsPGxsfGpaalpaalzs/O7+/vraqt//v///v///v/xsfGWl1aUlFSAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAlJKUxsfGxsfGraqthIKEtbK1xsfGraqt
+        lJaUnJqc7+/vraqt9/P39/P39/P39/P39/P39/P31tPWhIKEUlFSAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAvb69ra6thIKElJKUlJKUtba1zsvOraqtpaKlvb697+/vvbq97+/v7+/v7+/vzsvO
+        jI6Mc3Vzc3Vzc3VzpaKltbK1e3l7UlFSAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhIKEnJqcxsfGzs/O
+        paalraqtzs/Ora6tpaKltba17+/vtba15+fn5+fnraqtc3Vzc3Vzc3Vzc3Vzc3Vzc3Vzc3VzpaKl5+fn
+        xsfGe3l7UlFSAAAAAAAAAAAAAAAAAAAAxsfGvbq9xsPG1tPWpaalpaal1tPWra6tlJaUpaKl7+/vtba1
+        3t/exsfGjI6MjI6MY2VjAAAAAAAAAAAAAAAAWllajI6MtbK13t/e3t/ezs/OUlFSAAAAAAAAAAAAAAAA
+        1tfWpaalvb691tfWpaalpaal1tfWtbK1paalzs/O7+/vtbK11tfWnJqcjI6MWllaAAAAGBgYGBgYEBAQ
+        GBwYAAAAKSwpjI6MxsfG1tfW1tfWe317AAAAAAAAAAAAAAAA1tfWraqtxsPG1tfWraqtraqt1tfWtbK1
+        lJaUnJqc7+/vtbK1xsfGpaKlpaKlAAAAKSgpAAAAAAAAAAAAAAAACAgIAAAAY2VjtbK11tfW1tfWe317
+        AAAAAAAAAAAAAAAA3tveraqtxsPG3tveraqtraqt3tvetbK1paKlvb697+/vlJaUvbq9paalc3VzAAAA
+        CAwIAAAAGBgYKSgpEBAQAAAAKSwpAAAApaalxsfGzsvOe317AAAAAAAAAAAAAAAA3t/era6txsfG3t/e
+        ra6tra6t3t/etba1nJqctbK17+/vc3VzxsPGvbq9Sk1KCAwIAAAAAAAAShAAewAAUhAAAAAAAAAAAAAA
+        nJ6cxsfGxsfGe317AAAAAAAAAAAAAAAA5+Pnra6txsfG5+Pnra6tra6t5+Pntba1lJaUpaKl7+/vc3Vz
+        vb69vb69UlFSEBQQAAAACAwIcygAvSgAnCgAEBAQAAAAEBQQjIqMvb69vb69e317AAAAAAAAAAAAAAAA
+        5+fntbK1zs/O5+fntbK1tbK15+fnvbq9paalzs/O7+/vc3Vzvb69zsvOc3VzGBwYCAgIAAAAUjQAxl0A
+        hEUACAwIAAAAGBwYlJKUxsPGvbq9e317AAAAAAAAAAAAAAAA7+vvtbK1zs/O7+vvtbK1tbK17+vvvbq9
+        lJaUpaKl7+/vc3VztbK11tPWxsfGAAAASk1KAAAAAAQAKSgpGBwYAAAAKSgpAAAAvbq9vbq9tbK1e317
+        AAAAAAAAAAAAAAAA7+/vtbK1zs/O7+/vtbK1tbK17+/vvbq9paKltba17+/vc3Vzra6tzs/O3t/eQkVC
+        MTQxOTw5AAAAAAAAAAAAEBAQWl1aCAgI3t/etbK1ra6te317AAAAAAAAAAAAAAAA9/P3tba11tPW9/P3
+        tba1tba19/P3vb69paalzs/O7+/vc3FzpaKltba17+vv3tveCAwIKSgpY2VjUlFSWl1aUlFSAAAAra6t
+        3tvepaKlpaKle317AAAAAAAAAAAAAAAA9/P3tba11tfW9/P3tba1tba19/P3xsPGpaaltbK1e3l7lJaU
+        nJ6cnJ6czsvO7+/v5+PnSk1KAAAAAAAAAAAAAAAApaKl7+vvra6tnJ6cnJ6ce317AAAAAAAAAAAAAAAA
+        9/f35+fnvb69jI6MlJKUzs/O9/f3lJaUWl1ajIqMlJaUlJaUlJaUlJaUlJaUzsvO////////7+/vvb69
+        zs/O//////v/vb69lJaUlJaUlJaUe317AAAAAAAAAAAAAAAAlJKUlJKUxsPG7+vv//v///v///v/3tve
+        a21rlJKUlJKUlJKUlJKUlJKUlJKUjIqMlJaU1tfW5+Pn5+Pn5+PntbK1nJ6clJKUlJKUlJKUlJKUe317
+        AAAAAAAAAAAAAAAA7+/v////////////////zsvOc3Vzc3VzGBwYMTAxY2VjhIaEhIaEhIaEhIaEc3Fz
+        KSgpKSgpSk1KhIaEhIaEEBAQAAQAGBwYMTAxQkFCc3Fze317AAAAAAAAAAAAAAAAnJqc////////////
+        jIqMAAAAY2FjY2FjY2FjY2FjCAgISklKlJaUe3l7c3Vza2lrY2VjUlVSUlVShIKEhIKEGBwYKSgpKSgp
+        KSgpKSgpMTAxe317AAAAAAAAAAAAAAAAAAAAnJqcjIqMvb69zs/Oc3VztbK1tbK1tbK1tbK1lJKU3t/e
+        7+/v7+/v7+vv1tfWtbK1jIqMe317a2lrWl1aAAQAAAAAAAAAAAAAAAQAKSgpe317AAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAKSgpUlFSc3Vzvbq91tfW9/P39/P37+/v7+/v7+/v7+vv5+fnvbq9jIqMe317
+        jI6Me317lJaUhIKEUlFSEBAQUlFSGBwYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAISQhSk1Ka21rra6tzs/OjI6Ma2lrQkVCKSgpKSgpKSgpSk1KlJKUraqtjI6MGBwYAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAISAhQkVCa2lrUlVSUlVSGBwYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA///////////+H///+AP//+AAf//AAA//gAAB/4AA
+        AD+AAAAHgAAAA4AAAAGAAAABgAAAAYAAAAGAAAABgAAAAYAAAAGAAAABgAAAAYAAAAGAAAABgAAAAYAA
+        AAGAAAABgAAAAcAAAAHgAAAB/gAAA//4AAf//+A///////////8oAAAAEAAAACAAAAABABgAAAAAAEAD
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAe3l7QkFC////5+fnvb69
+        tbK1c3Fzc3Fzc3Fzc3Vzvb69zsvOxsPGa21rAAAAAAAA////zsvOKSgpzsvO1tPWe317AAAAAAAAAAAA
+        QkFCWl1atbK1vbq9paalAAAAAAAA////////ISAh3t/ejIqMCAgIlJaUxsPGhIKEAAAAMTQxc3Fztba1
+        paalAAAAAAAAe3l7zsvOKSwp3tveGBQQlJaUhGE5vXUhc1EpjI6MAAAAc3FztbK1nJ6cAAAAAAAA////
+        ////GBwY3tveAAQAxsPGxpJatRwAvXEYvb69AAAAc3Fzra6tnJ6cAAAAAAAAe3l7zsvOKSwp3tveAAQA
+        lJaUpY5zxpJanGUxjIqMAAAAc3FzraatnJqcAAAAAAAA////xsfGOTw5zs/OjI6MAAAAjI6Mvb69jI6M
+        AAAAWl1ajI6MpaalnJqcAAAAAAAAxsfGQkFCvb691tfW5+PnhIKEAAAAAAAAAAAAUlVSe3l7QkVCQkFC
+        OTw5AAAAAAAAWllavb697+vv3t/ezsvO1tPW1tfWvb69paalpaKlhIKEGBwYCAgICAgIAAAAAAAAlJaU
+        7+/v5+Pn3tveztPWe3l7Y2FjY2Fjvbq9tbK1paalhIKEc3VzUlVSAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA//8AAP//AACAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAB
+        AAD//wAA//8AAA==
+</value>
+  </data>
 </root>
